@@ -21,7 +21,11 @@ pipeline {
               }
               steps {
                     withSonarQubeEnv('sonar_local'){
-                        bat "${scannerHome}/bin/sonar-scanner -e -Dsonar.projectKey=deployback -Dsonar.host.url=http://localhost:9000 -Dsonar.login=849e9cadd301bd28751e2fe723a2e145851c01bb -Dsonar.java.binaries=target"
+                        withEnv(['SONAR_SCANNER_OPTS=--add-opens=java.base/java.lang=ALL-UNNAMED']) {
+                        script {
+                            bat "${scannerHome}/bin/sonar-scanner -e -Dsonar.projectKey=deployback -Dsonar.host.url=http://localhost:9000 -Dsonar.login=849e9cadd301bd28751e2fe723a2e145851c01bb -Dsonar.java.binaries=target"
+                        }
+                    }
                     }
             }
         }
